deploy/development/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-ingress
  namespace: pfl-analytics-dev
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: analytics-ingress-pfl-analytics-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: '100'
    nginx.ingress.kubernetes.io/enable-modsecurity: 'true'
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecAuditEngine On
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:namespace=pfl-analytics-dev"
spec:
  ingressClassName: modsec
  tls:
    - hosts:
        - pfl-analytics-dev.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: pfl-analytics-dev.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 8501
